--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^9",
     "core-js": "^3.6.5",
-    "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-webrtc": "^3.0.0",
@@ -22,14 +19,15 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.1.0",
-    "bootstrap": "^5.1.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
@@ -37,9 +35,10 @@
     "jquery": "^3.6.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.16.1",
+    "postcss": "^7.0.39",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue-cli-plugin-tailwind": "~2.2.18",
     "vue-template-compiler": "^2.6.11"
   }
